refactor + code review save/load function.

--- a/save.yaml
+++ b/save.yaml
@@ -404,7 +404,7 @@ board:
     bomb: false
     flagged: false
     adjacent_bombs: 1
-    revealed: false
+    revealed: true
 game_over: false
 num_bombs: 33
 bombs_found: 0
